<resources>
    <string name="app_name">kotlinMVMLogin</string>
    <string name="don_t_have_an_account_sign_up_here" />
    <string name="email">Email</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="user_login">User Login</string>
    <string name="password">Password</string>
    <string name="app_logo">App Logo</string>
    <string name="s">User Login</string>
    <string name="registration">Registration</string>
    <string name="ress">Registration</string>
    <string name="fname">fName</string>
    <string name="lname">lName</string>
    <string name="Password">Password</string>
</resources>