<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActivityUser">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/firstName"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/fname"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/lastName"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="@string/lname"
            android:textStyle="bold"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="@string/email"
            android:textStyle="bold"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/pass"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="@string/Password"
            android:textStyle="bold"
            android:gravity="center"
            />
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/userRecylerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        />

</LinearLayout>