<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_login"
        android:textSize="25sp"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:layout_margin="20dp"
        />
    <EditText
        android:id="@+id/regEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/email"
        android:layout_margin="30dp"
        />
    <EditText
        android:id="@+id/regPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/password"
        android:layout_margin="30dp"
        />
    <Button
        android:id="@+id/regBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Login"
        android:layout_margin="30dp"
        android:background="@drawable/btn"
        app:backgroundTint="#B1A5A5"
        android:textColor="@color/black"
        android:textSize="15sp"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardElevation="4dp"
        app:cardCornerRadius="8dp"
        android:layout_gravity="center_horizontal"
        >

        <TextView
            android:id="@+id/textViewSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="don't have an account sign_up here"
            android:textColor="#BD2525"
            android:textSize="14sp"
            android:padding="8dp"/>
    </androidx.cardview.widget.CardView>

</LinearLayout>